# moya-geminiAgent

./: mkdocs.yml  pyproject.toml  sonar-project.properties
.scannerwork/: report-task.txt
TSE-Project/: query.ipynb  query2.py  query3.ipynb
TSE-Project/enhanced_embeddings/: chroma.sqlite3
docs/: agents.md  examples.md  explanations.md  getting-started.md  guides.md  index.md  memory.md  orchestrators.md  quickstart.md  reference.html  reference.md  tools.md
examples/: dynamic_agents.py  quick_start_azure_openai.py  quick_start_bedrock.py  quick_start_crewai.py  quick_start_gemini.py  quick_start_multiagent_react.py  quick_start_ollama.py  quick_start_openai.py
moya/agents/: .env  agent.py  azure_openai_agent.py  bedrock_agent.py  crewai_agent.py  gemini_agent.py  gemini_agent_helpers.py  gemini_filter_agent.py  gemini_summarizer_agent.py  ollama_agent.py  openai_agent.py  remote_agent.py
moya/classifiers/: classifier.py  llm_classifier.py
moya/memory/: file_system_repo.py  in_memory_repository.py  repository.py
moya/orchestrators/: multi_agent_orchestrator.py  orchestrator.py  react_orchestrator.py  simple_orchestrator.py
moya/registry/: agent_registry.py  agent_repository.py  base_agent_repository.py  in_memory_agent_repository.py
moya/tools/: ephemeral_memory.py  persistent_memory.py  tool.py  tool_registry.py
